<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hotels.features.main.activities.Fragments.HomeScreen">

    <!-- TODO: Update blank fragment layout -->

    <com.hotels.base.customuicomponents.HotelBoldTextView
        android:id="@+id/welcom_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/points_text"
        android:layout_alignLeft="@+id/points_text"
        android:layout_alignStart="@+id/points_text"
        android:layout_marginBottom="13dp"
        android:text="@string/welcome_text"
        android:textSize="18dp" />

    <com.hotels.base.customuicomponents.HotelsTextView
        android:id="@+id/points_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_points"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="17dp"
        android:layout_marginStart="17dp"
        android:layout_marginBottom="12dp" />

    <com.hotels.base.customuicomponents.HotelsTextView
        android:id="@+id/home_search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="156dp"
        android:text="@string/search_your_rooms" />
</RelativeLayout>
