<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hotels.features.main.activities.Fragments.ViewPager.Account.AccountEditAccountFragment">

    <!-- TODO: Update blank fragment layout -->
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="User Info:"
            android:textSize="30sp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView10"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:id="@+id/userinfo_firstname_layout">

            <EditText
                android:id="@+id/userinfo_firstname"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/first_name_hint" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userinfo_firstname_layout"
            android:layout_alignStart="@+id/userinfo_firstname_layout"
            android:layout_gravity="center"
            android:id="@+id/userinfo_lastname_layout">

            <EditText
                android:id="@+id/userinfo_lastname"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/last_name_hint" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/userinfo_phone_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/userinfo_lastname_layout"
            android:layout_below="@+id/userinfo_lastname_layout"
            android:layout_gravity="center">

            <EditText
                android:id="@+id/userinfo_phone"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/phone_hint" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="User Password:"
            android:textAlignment="center"
            android:textSize="30sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/userpassword_password_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <EditText
                android:id="@+id/userpassword_password"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/userpassword_confirmpassword_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <EditText
                android:id="@+id/userpassword_confirmpassword"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password_hint" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/account_save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/save" />

    </LinearLayout>
</ScrollView>

</RelativeLayout>
