<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.main.activities.Activities.Login.SignUpScreen">

    <com.hotels.base.customuicomponents.HotelBoldTextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="17dp"
        android:layout_marginStart="17dp"
        android:text="User Information:"
        android:textAlignment="center"
        android:textSize="20dp"
        android:textStyle="bold" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView3">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">



            <android.support.design.widget.TextInputLayout
                android:id="@+id/user_signup_firstnamelayout_editext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="18dp">

                <com.hotels.base.customuicomponents.HotelEditText
                    android:id="@+id/user_signup_firstname_editext"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name_hint" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/user_signup_lastnamelayout_editext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/user_signup_firstnamelayout_editext"
                android:layout_alignStart="@+id/user_signup_firstnamelayout_editext"
                android:layout_below="@+id/user_signup_firstnamelayout_editext">

                <com.hotels.base.customuicomponents.HotelEditText
                    android:id="@+id/user_signup_lastname_editext"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name_hint" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/user_signup_phonelayout_editext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/user_signup_lastnamelayout_editext"
                android:layout_alignStart="@+id/user_signup_lastnamelayout_editext"
                android:layout_below="@+id/user_signup_lastnamelayout_editext">

                <com.hotels.base.customuicomponents.HotelEditText
                    android:id="@+id/user_signup_phone_editext"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_hint" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/user_signup_passwordlayout_editext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/user_signup_phonelayout_editext"
                android:layout_alignStart="@+id/user_signup_phonelayout_editext"
                android:layout_below="@+id/user_signup_phonelayout_editext">

                <com.hotels.base.customuicomponents.HotelEditText
                    android:id="@+id/user_signup_password_editext"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_hint" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/user_signup_confirmpasswordlayout_editext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/user_signup_passwordlayout_editext"
                android:layout_alignStart="@+id/user_signup_passwordlayout_editext"
                android:layout_below="@+id/user_signup_passwordlayout_editext">

                <com.hotels.base.customuicomponents.HotelEditText
                    android:id="@+id/user_signup_confirmpassword_editext"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password_hint" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/user_signup_emaillayout_editext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/user_signup_confirmpasswordlayout_editext"
                android:layout_alignStart="@+id/user_signup_confirmpasswordlayout_editext"
                android:layout_below="@+id/user_signup_confirmpasswordlayout_editext">

                <com.hotels.base.customuicomponents.HotelEditText
                    android:id="@+id/user_signup_email_editext"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_hint" />

            </android.support.design.widget.TextInputLayout>
            <com.hotels.base.customuicomponents.HotelBoldButton
                android:id="@+id/user_signup_signup_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/input_login_hint"
                android:text="@string/sign_up"
                android:layout_below="@id/user_signup_emaillayout_editext"
                android:layout_marginTop="30dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true" />
        </RelativeLayout>
    </ScrollView>


</RelativeLayout>
